--- a/assets/index.html
+++ b/assets/index.html
@@ -9,10 +9,61 @@
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <img 
+        src="bowtie-cat.png" 
+        alt="Profile image of cat wearing a bow tie." 
+      />
     </header>
     <main>
-      <!-- Student code goe here Ashleys code -->
+   <section class="card" id="html-section">
+    <h2>HTML</h2>
+    <ul>
+      <li>The head element contains informaiton about the webpage.</li>
+      <li>The body element represents the visible content shown to the user.</li>
+      <li>HTML stands for HyperText Markup Language and is used to create web pages.</li>
+      <li>Tags are enclosed in angle brackets (< >) and can have attributes that provide additional information about the element.</li>
+      <li>HTML documents should start with a <!DOCTYPE> declaration that specifies the HTML version being used.</li>
+      <li>The <html> element is the root element of an HTML document, and all other elements should be contained within it.</li>
+      <li>HTML has several types of elements, including structural elements (such as headings, paragraphs, and lists), text-level elements (such as bold and italic), and multimedia elements (such as images and videos).</li>
+    </ul>
+  </section>
+
+   <section class="card" id="css-section">
+    <h2>CSS</h2>
+    <ul>
+      <li>Enter your CSS notes here</li>
+    </ul>
+   </section>
+
+   <section class="card" id="git-section">
+    <h2>Git</h2>
+    <ul>
+      <li>Git is a version control system that allows you to track changes to files and collaborate with others on a project.</li>
+      <li>git init: Initialize a new Git repository</li>
+      <li>git clone: Create a copy of an existing Git respository</li>
+      <li>git add: Stage changes for a commit</li>
+      <li>git commit: create a new commit with the staged changes</li>
+      <li>git status: Show the current status of the repository</li>
+      <li>git log: show the commit history of the repository</li>
+      <li>git branch: create, list, or delete branches</li>
+      <li>git checkout: switch to a different branch or commit</li>
+      <li>git merge: merge changes from one branch into another</li>
+      <li>git pull: fetch changes from a remote repository and merge them into the current branch</li>
+      <li>git push: push local changes to a remote repository</li>
+      <li>git remote: manage remote repositories</li>
+      <li>git diff: show the differences between files or commits</li>
+      <li>	git stash: temporarily save changes that are not ready to be committed
+      </li>
+    </ul>
+   </section>
+
+   <section class="card" id="javascript-section">
+    <h2>JavaScript</h2>
+    <ul>
+      <li>Enter your JavaScript notes here</li>
+    </ul>
+   </section> 
+   
     </main>
 
     <footer>
