added css to project

--- a/assets/index.html
+++ b/assets/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -31,7 +32,16 @@
    <section class="card" id="css-section">
     <h2>CSS</h2>
     <ul>
-      <li>Enter your CSS notes here</li>
+      <li>There are three ways to style a webpage using CSS: inline CSS, internal CSS style sheet, and external CSS style sheet.</li>
+      <li>A margin indicates how much space we want around the outside of an element.</li>
+      <li>A padding indicates how much space we want around the content inside an element.</li>
+      <li>Box model: Understanding how the box model works is fundamental to working with CSS. It describes how every element in a webpage is composed of a rectangular box that consists of four areas: content, padding, border, and margin.</li>
+      <li>Selectors: CSS selectors are used to select specific HTML elements on a page to apply styles to. There are several types of selectors, including element selectors, class selectors, and ID selectors.</li>
+      <li>Cascading and inheritance: CSS stands for cascading style sheets, meaning styles are applied in a cascading manner from top to bottom. Inheritance allows for the styles of a parent element to be inherited by its child elements.</li>
+      <li>Responsive design: With the rise of mobile devices, it's important for web developers to design responsive web pages that adapt to different screen sizes. CSS offers several tools for creating responsive designs, such as media queries and flexbox.</li>
+      <li>Box-shadow, border-radius, and gradients: These are some common CSS properties used to add visual appeal to web pages. Box-shadow can be used to add depth and dimension to elements, border-radius can be used to create rounded corners, and gradients can be used to create beautiful color transitions.</li>
+      <li>CSS preprocessors: Preprocessors like Sass and Less allow developers to write CSS with additional features like variables, functions, and nesting, making the code more modular and easier to manage.</li>
+      <li>Debugging tools: Debugging is a crucial skill for any developer. Chrome Developer Tools and Firefox Developer Tools are excellent tools for debugging CSS issues, as they allow developers to inspect the styles applied to each element and see how they interact with each other.</li>
     </ul>
    </section>
 
