--- a/assets/index.html
+++ b/assets/index.html
@@ -70,7 +70,15 @@
    <section class="card" id="javascript-section">
     <h2>JavaScript</h2>
     <ul>
-      <li>Enter your JavaScript notes here</li>
+      <li>A variable is a named container that allows us to store data in our code.</li>
+      <li>Control flow is the order in which a computer executes code in a script.</li>
+      <li>JavaScript is case sensitive, so "myVar" and "myvar" are two different variables.</li>
+      <li>JavaScript uses curly braces {} to define code blocks, and semicolons ; to separate statements</li>
+      <li>alert(): This function displays a message box with a specified message and an OK button. For example, alert("Hello, world!"); will display a message box with the text "Hello, world!".</li>
+      <li>console.log(): This function prints a message to the console, which is useful for debugging and troubleshooting. For example, console.log("Hello, world!"); will print the text "Hello, world!" to the console.</li>
+      <li>Math.random(): This function generates a random number between 0 and 1. For example, Math.random(); will return a random number between 0 and 1.</li>
+      <li>JavaScript supports several data types including numbers, strings, booleans, arrays, and objects.</li>
+
     </ul>
    </section> 
    
